fixed center alignment for cert names on about page

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -241,7 +241,8 @@ li {
     padding: 0;
   }
   .certNames {
-    text-align: center;
+    display: flex;
+    justify-content: center;
   }
   .certLinks {
     margin-bottom: 25px;
